tests/baselines/reference/objectTypeLiteralSyntax2.errors.txt
==== tests/cases/conformance/types/objectTypeLiteral/objectTypeLiteralSyntax2.ts (2 errors) ====
    var x: {
        foo: string,
                   ~
!!! error TS1005: ';' expected.
        bar: string
    }
    
    // ASI makes this work
    var y: {
        foo: string
        bar: string
    }
    
    var z: { foo: string bar: string }
                         ~~~
!!! error TS1005: ';' expected.